apps/modernization-ui/src/design-system/card/collapsible.module.scss
@mixin expanded($property) {
    transition-duration: 0.3s;
    transition-property: #{$property};
    transition-timing-function: ease-out;
}

@mixin collapsed($property) {
    transition-duration: 0.3s;
    transition-property: #{$property};
    transition-timing-function: ease-in;
}

.collapsible {
    @include expanded('height');
    overflow: hidden;
    visibility: visible;

    border-end-start-radius: inherit;
    border-end-end-radius: inherit;

    &.collapsed {
        @include collapsed('height');

        visibility: hidden;
    }
}

